--- a/index.html
+++ b/index.html
@@ -24,5 +24,50 @@
             </a>
         </h1>
     </header>
+
+
+    <!--  
+        mainタグの作成
+        ・profile用とwork用の箱を作成する
+        →divタグを使っていきます。
+    -->
+<div class="block-main">
+    <!-- 
+        profileの箱
+    -->
+    <div class="box-profile">
+            <h2 class="sub-title">
+                <span class="color-green">P</span>rofile
+            </h2>
+            <div class="item-list">
+                <img src="" alt="プロフィール画像">
+                <b>やすあき</b>
+                <p class="color-green">HTML / CSS / PHP / MySQL / Lalabel / Adobe Xd</p>
+                <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+            </div>
+            <ul class="icon-list">
+                <li>
+                    <a href="">
+                        <img src="" alt="github用アイコン">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="twitter用のアイコン">
+                    </a>
+                </li>
+            </ul>
+        
+    </div>
+
+    <!--
+        work用の箱 
+    -->
+    <div>
+
+    </div>
+
+</div>
+
 </body>
 </html>
