--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- 
+        レスポンシブデザインの設定
+        ・viewportの設定
+    -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- このサイトは何か説明する場所 -->
     <meta name="description" content="テック太郎の自己紹介">
@@ -40,7 +44,7 @@
                 <span class="color-green">P</span>rofile
             </h2>
             <div class="item-list">
-                <img src="" alt="プロフィール画像">
+                <img src="/Users/yasuaki/Desktop/portfolio/img/gdliugd.jpg" alt="プロフィール画像">
                 <b>やすあき</b>
                 <p class="color-green">HTML / CSS / PHP / MySQL / Lalabel / Adobe Xd</p>
                 <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
@@ -48,12 +52,12 @@
             <ul class="icon-list">
                 <li>
                     <a href="">
-                        <img src="" alt="github用アイコン">
+                        <img src="img/github.svg" alt="github用アイコン">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="twitter用のアイコン">
+                        <img src="img/twitter.svg" alt="twitter用のアイコン">
                     </a>
                 </li>
             </ul>
@@ -70,7 +74,7 @@
 
         <ul class="works-list">
             <li>
-                <img src="" alt="Twitterクローンの画像">
+                <img src="img/works.png" alt="Twitterクローンの画像">
                 <h3>Twitterクローン</h3>
                 <span>HTML / CSS / PHP / MySQL</span>
                 <div class="link">
@@ -80,7 +84,7 @@
             </li>
 
             <li>
-                <img src="" alt="Twitterクローンの画像">
+                <img src="img/works.png" alt="Twitterクローンの画像">
                 <h3>Twitterクローン</h3>
                 <span>HTML / CSS / PHP / MySQL</span>
                 <div class="link">
@@ -90,7 +94,7 @@
             </li>
 
             <li>
-                <img src="" alt="Twitterクローンの画像">
+                <img src="img/works.png" alt="Twitterクローンの画像">
                 <h3>Twitterクローン</h3>
                 <span>HTML / CSS / PHP / MySQL</span>
                 <div class="link">
