--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="color-green">P</span>rofile
             </h2>
             <div class="item-list">
-                <img src="/Users/yasuaki/Desktop/portfolio/img/gdliugd.jpg" alt="プロフィール画像">
+                <img src="img/gdliugd.jpg" alt="プロフィール画像">
                 <b>やすあき</b>
                 <p class="color-green">HTML / CSS / PHP / MySQL / Lalabel / Adobe Xd</p>
                 <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
